# DQN-EC

./: .gitignore  README.md  comparison.py  comparison_table.tex  dalgg.tex  dataset.py  dqn-evaluation.py  dqn-speaker-listener.py  dqn.py  draw_ae_architecture.py  evaluation.py  fixed-graph-autoencoder-0.py  fixed-graph-autoencoder-1.py  fixed-graph-autoencoder-2.py  graph-autoencoder-rec-only.py  graph-autoencoder.py  graph_autoencoder.py  graph_autoencoder_20250623_210243.pth  graph_comparison.py  graph_comparison_averaged_20250706_212945.json  graph_comparison_averaged_20250708_225155.json  graph_comparison_averaged_20250709_142927.json  graph_comparison_detailed_20250706_061103.csv  graph_comparison_raw_20250706_212945.json  graph_comparison_raw_20250708_225155.json  graph_comparison_raw_20250709_142927.json  graph_comparison_results_20250706_061103.json  graph_comparison_table_20250706_061103.csv  graph_comparison_viz.py  graph_comparison_viz_bw.py  graph_dqn_speaker_listener.py  graph_viz_script.py  graphs.py  graphs_viz_comparison.py  graphs_wrapper.py  hypergraph.py  hypergraph_algorithm.py  hypergraph_geometric.py  hypergraph_speaker.py  hypergraph_visualization.py  (+23 more)
algos/: acogg.py  acogg_bachmark.py  acogg_nn.py  amadg-implementation.py  beta_skeleton.py  complexity_analysis.py  complexity_viz.py  delaunay.py  vortex.py
checkpoints/: listener_gae.pt  speaker_gae.pt
checkpoints/ma_dqn_hypergraph_gat__1__1755614506/: listener_model.pt  metadata.npy  speaker_model.pt
checkpoints/ma_dqn_hypergraph_gat__1__1755674832/: listener_model.pt  metadata.npy  speaker_model.pt
modules/: dataset.py  encoder.py  graphs.py  hypergraph.py  utils.py  vectorizer.py  wrapper.py
runs/run_20250714_155357/: DQN.csv  Double DQN + Communication.csv  Double DQN.csv  rl_runs.csv
runs/run_20250714_155357/Metrics/: averaged.json  raw.json
toy_example/: animate_toy_models.py  graph_evolution.py  train_toy_models.py  visualize_toy_models.py
toy_example/models/: listener_0_ddqn.pth  listener_1_ddqn.pth  speaker_0_ddqn.pth  speaker_1_ddqn.pth
