[tool.poetry]
name = "graph autoencoder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.18"
aiosignal = "1.3.2"
anyio = "4.9.0"
attrs = "25.3.0"
build = "1.2.2.post1"
cachecontrol = "0.14.3"
certifi = "2025.4.26"
charset-normalizer = "3.4.2"
cleo = "2.1.0"
cloudpickle = "3.1.1"
colorama = "0.4.6"
contourpy = "1.3.2"
crashtest = "0.4.1"
cycler = "0.12.1"
distlib = "0.3.9"
docstring-parser = "0.16"
dulwich = "0.22.8"
farama-notifications = "0.0.4"
fastjsonschema = "2.21.1"
filelock = "3.18.0"
findpython = "0.6.3"
fonttools = "4.58.0"
frozenlist = "1.6.0"
fsspec = "2025.3.2"
gymnasium = "1.1.1"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jinja2 = "3.1.6"
keyring = "25.6.0"
kiwisolver = "1.4.8"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
matplotlib = "3.10.3"
mdurl = "0.1.2"
more-itertools = "10.7.0"
mpmath = "1.3.0"
msgpack = "1.1.1"
multidict = "6.4.4"
networkx = "3.4.2"
numpy = "2.2.5"
packaging = "25.0"
pbs-installer = "2025.6.12"
pettingzoo = "1.24.3"
pillow = "11.2.1"
pkginfo = "1.12.1.2"
platformdirs = "4.3.8"
poetry = "2.1.3"
poetry-core = "2.1.3"
propcache = "0.3.1"
psutil = "7.0.0"
pygame = "2.6.1"
pygments = "2.19.2"
pyparsing = "3.2.3"
pyproject-hooks = "1.2.0"
python-dateutil = "2.9.0.post0"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.13.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "14.0.0"
scipy = "1.15.3"
setuptools = "80.7.1"
shellingham = "1.5.4"
shtab = "1.7.2"
six = "1.17.0"
sniffio = "1.3.1"
sympy = "1.14.0"
tomlkit = "0.13.3"
torch = "2.7.0"
torch-geometric = "2.6.1"
tqdm = "4.67.1"
trove-classifiers = "2025.5.9.12"
typeguard = "4.4.4"
tyro = "0.9.25"
urllib3 = "2.4.0"
virtualenv = "20.31.2"
yarl = "1.20.0"
zstandard = "0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
